day four, not completed yet and header structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-    <h1 class="header">100 Days of Code</h1>
+
+    <header>
+        <div class="search"></div>
+        <h1 class="header">100 Days of Code</h1>
+        <div class="logo"></div>
+    </header>
 
     <main class="container">
         <div class="day dayOne">
@@ -64,10 +69,12 @@
             <h5 class="title">#Four</h5>
             <div class="rate">
                 <button class="btn4">
-                    <div class="star"><span class="fa fa-star"></span></div>
+                    <div class="hoverStar star">
+                        <span class="fa fa-star"></span>
+                    </div>
                     <div class="text">Star</div>
+                    <div class="count"></div>
                 </button>
-                <div class="count"></div>
             </div>
         </div>
     </main>
