--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>100 Days of Code</title>
 </head>
 
@@ -55,14 +55,14 @@
             <h5 class="title">#Two</h5>
 
             <button class="btn2">
-                <a href="/oneToTen/dayTwo/two.html">DIGITAL CLOCK</a>
+                <a href="./oneToTen/dayTwo/two.html">DIGITAL CLOCK</a>
             </button>
         </div>
         <div class="day dayThree">
             <h5 class="title">#Three</h5>
 
             <button class="btn3">
-                <a href="/oneToTen/dayThree/three.html">STOP WATCH</a>
+                <a href="./oneToTen/dayThree/three.html">STOP WATCH</a>
             </button>
         </div>
         <div class="day dayFour">
@@ -77,9 +77,16 @@
                 </button>
             </div>
         </div>
+        <div class="day dayFive">
+            <h5 class="title">#Five</h5>
+            <button class="btn5">
+                <a href="./oneToTen/dayFive/five.html">RGB SELECTOR</a>
+            </button>
+        </div>
+        </div>
     </main>
 
-    <script src="/js.js"></script>
+    <script src="js.js"></script>
 </body>
 
 </html>
