--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h5 class="title">#Four</h5>
             <div class="rate">
                 <button class="btn4">
-                    <div class="hoverStar star">
+                    <div class="star">
                         <span class="fa fa-star"></span>
                     </div>
                     <div class="text">Star</div>
