fix: moved all day to seperate folder

--- a/oneToTen/dayFour/four.html
+++ b/oneToTen/dayFour/four.html
@@ -21,7 +21,7 @@
     </header>
 
     <main class="container">
-        <div class="day">
+        <div class="day dayOne">
             <h5 class="title">#One</h5>
 
             <button class="btn1">
@@ -29,27 +29,33 @@
             </button>
         </div>
 
-        <div class="day">
+        <div class="day dayTwo">
             <h5 class="title">#Two</h5>
 
             <button class="btn2">
                 <a href="./oneToTen/dayTwo/two.html">DIGITAL CLOCK</a>
             </button>
         </div>
-        <div class="day">
+        <div class="day dayThree">
             <h5 class="title">#Three</h5>
 
             <button class="btn3">
                 <a href="./oneToTen/dayThree/three.html">STOP WATCH</a>
             </button>
         </div>
-        <div class="day">
+        <div class="day dayFour">
             <h5 class="title">#Four</h5>
-            <button class="btn4">
-                    RATE
-            </button>
+            <div class="rate">
+                <button class="btn4">
+                    <div class="star">
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <div class="text">Star</div>
+                    <div class="count"></div>
+                </button>
+            </div>
         </div>
-        <div class="day">
+        <div class="day dayFive">
             <h5 class="title">#Five</h5>
             <button class="btn5">
                 <a href="./oneToTen/dayFive/five.html">RGB SELECTOR</a>
