--- a/index.html
+++ b/index.html
@@ -14,49 +14,60 @@
 
 <body>
 
-    <header>
-        <div class="search"></div>
-        <h1 class="header">100 Days of Code</h1>
-        <div class="logo"></div>
-    </header>
+    <div class="wrapper">
+        <nav class="navBar">
+            <div class="navHeader">menu icon + name</div>
 
-    <main class="container">
-        <div class="day">
-            <h5 class="title">#One</h5>
+        </nav>
+        <div class="container">
+            <header>
+                <div class="search"></div>
+                <h1 class="header">100 Days of Code</h1>
+                <div class="logo"></div>
+            </header>
 
-            <button class="btn1">
+            <main class="main">
+                <div class="day">
+                    <h5 class="title">#One</h5>
+
+                    <button class="btn1">
                 <a href="./oneToTen/dayOne/one.html">PUBLISH</a>
             </button>
-        </div>
+                </div>
 
-        <div class="day">
-            <h5 class="title">#Two</h5>
+                <div class="day">
+                    <h5 class="title">#Two</h5>
 
-            <button class="btn2">
+                    <button class="btn2">
                 <a href="./oneToTen/dayTwo/two.html">DIGITAL CLOCK</a>
             </button>
-        </div>
-        <div class="day">
-            <h5 class="title">#Three</h5>
+                </div>
+                <div class="day">
+                    <h5 class="title">#Three</h5>
 
-            <button class="btn3">
+                    <button class="btn3">
                 <a href="./oneToTen/dayThree/three.html">STOP WATCH</a>
             </button>
-        </div>
-        <div class="day">
-            <h5 class="title">#Four</h5>
-            <button class="btn4">
-                    RATE
+                </div>
+                <div class="day">
+                    <h5 class="title">#Four</h5>
+                    <button class="btn4">
+                <a href="./oneToTen/dayFour/four.html">RATE</a>
+
             </button>
-        </div>
-        <div class="day">
-            <h5 class="title">#Five</h5>
-            <button class="btn5">
+                </div>
+                <div class="day">
+                    <h5 class="title">#Five</h5>
+                    <button class="btn5">
                 <a href="./oneToTen/dayFive/five.html">RGB SELECTOR</a>
             </button>
+                </div>
         </div>
-        </div>
-    </main>
+        </main>
+    </div>
+
+    </div>
+
 
     <script src="js.js"></script>
 </body>
