fixed: the styles and js and html

--- a/oneToTen/dayFour/four.html
+++ b/oneToTen/dayFour/four.html
@@ -8,63 +8,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="four.css">
     <title>100 Days of Code</title>
 </head>
 
 <body>
-
-    <header>
-        <div class="search"></div>
-        <h1 class="header">100 Days of Code</h1>
-        <div class="logo"></div>
-    </header>
-
-    <main class="container">
-        <div class="day dayOne">
-            <h5 class="title">#One</h5>
-
-            <button class="btn1">
-                <a href="./oneToTen/dayOne/one.html">PUBLISH</a>
-            </button>
-        </div>
-
-        <div class="day dayTwo">
-            <h5 class="title">#Two</h5>
-
-            <button class="btn2">
-                <a href="./oneToTen/dayTwo/two.html">DIGITAL CLOCK</a>
-            </button>
-        </div>
-        <div class="day dayThree">
-            <h5 class="title">#Three</h5>
-
-            <button class="btn3">
-                <a href="./oneToTen/dayThree/three.html">STOP WATCH</a>
-            </button>
-        </div>
-        <div class="day dayFour">
-            <h5 class="title">#Four</h5>
-            <div class="rate">
-                <button class="btn4">
+    <div class="day dayFour">
+        <h5 class="title">#Four</h5>
+        <div class="rate">
+            <button class="btn4">
                     <div class="star">
                         <span class="fa fa-star"></span>
                     </div>
                     <div class="text">Star</div>
                     <div class="count"></div>
-                </button>
-            </div>
-        </div>
-        <div class="day dayFive">
-            <h5 class="title">#Five</h5>
-            <button class="btn5">
-                <a href="./oneToTen/dayFive/five.html">RGB SELECTOR</a>
             </button>
         </div>
-        </div>
+    </div>
+
     </main>
 
-    <script src="js.js"></script>
+    <script src="four.js"></script>
 </body>
 
 </html>
