navBar click and its response

--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
 
     <div class="wrapper">
         <nav class="navBar">
-
+            <header>
+                <span>HALAL LAB</span>
+                <div class="menu">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </header>
+            <ul></ul>
+            <footer>
+                <img src="asset/img/profile.jpg" alt="">
+                <div class="profileInfo">
+                    <p class="profileName">ArmanNijum</p>
+                    <span class="profileStatus">Admin</span>
+                </div>
+                <span class="fa fa-angle-up"></span>
+            </footer>
         </nav>
         <div class="container">
             <header>
