--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
                     <h5 class="title">#Five</h5>
                     <button class="btn5">
                 <a href="./oneToTen/dayFive/five.html">RGB SELECTOR</a>
-            </button>
+                    </button>
+                </div>
+                <div class="day">
+                    <h5 class="title">#Six</h5>
+                    <button class="btn6">
+                <a href="./oneToTen/daySix/six.html">SEARCH</a>
+                    </button>
                 </div>
         </div>
         </main>
