--- a/oneToTen/daySix/six.html
+++ b/oneToTen/daySix/six.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./five.css">
+    <link rel="stylesheet" href="./six.css">
     <title>Document</title>
 
 
@@ -30,7 +30,7 @@
         <label>B</label>
         <input type="range" class="range blue" min="0" max="255" value="0">
     </div>
-    <script src="five.js"></script>
+    <script src="six.css"></script>
 </body>
 
 </html>
