--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <div class="bar"></div>
                 </div>
             </header>
+            <div class="headerSeperator"></div>
             <ul></ul>
             <footer>
                 <img src="asset/img/profile.jpg" alt="">
@@ -80,7 +81,13 @@
                 <div class="day">
                     <h5 class="title">#Six</h5>
                     <button class="btn6">
-                <a href="./oneToTen/daySix/six.html">SEARCH</a>
+                        <a href="./oneToTen/daySix/six.html">SEARCH</a>
+                    </button>
+                </div>
+                <div class="day">
+                    <h5 class="title">#Seven</h5>
+                    <button class="btn7">
+                        <a href="./oneToTen/daySeven/seven.html">SEARCH</a>
                     </button>
                 </div>
         </div>
