--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
                 <a href="./oneToTen/daySix/six.html">SEARCH</a>
                     </button>
                 </div>
+                <div class="day">
+                    <h5 class="title">#Seven</h5>
+                    <button class="btn6">
+                <a href="./oneToTen/daySeven/seven.html">DRAG</a>
+                    </button>
+                </div>
         </div>
         </main>
     </div>
