--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="day">
                     <h5 class="title">#Six</h5>
                     <button class="btn6">
-                        <a href="./oneToTen/daySix/six.html">SEARCH</a>
+                        <a href="./oneToTen/daySix/six.html">XO</a>
                     </button>
                 </div>
                 <div class="day">
