--- a/oneToTen/daySix/six.html
+++ b/oneToTen/daySix/six.html
@@ -19,18 +19,37 @@
 </head>
 
 <body>
-    <div class="RGB">
-        <div class="color"></div>
-        <label>R</label>
-        <input type="range" class="range red" min="0" max="255" value="0">
+    <div class="XO">
+        <header>
+            <div class="row">
+                <p>
+                    Player 1: X
+                </p>
+                <p>Player 2: O</p>
+            </div>
+            <div class="row">
+                <p>Result:<span class="result"></span></p>
 
-        <label>G</label>
-        <input type="range" class="range green" min="0" max="255" value="0">
+                <p><span class="turn"></span>Turn</p>
+            </div>
+            <div class="row">
+                <button class="reset">RESET</button>
+            </div>
+        </header>
+        <div class="boxes">
+            <div class="box b0"></div>
+            <div class="box b1"></div>
+            <div class="box b2"></div>
+            <div class="box b3"></div>
+            <div class="box b4"></div>
+            <div class="box b5"></div>
+            <div class="box b6"></div>
+            <div class="box b7"></div>
+            <div class="box b8"></div>
+        </div>
 
-        <label>B</label>
-        <input type="range" class="range blue" min="0" max="255" value="0">
     </div>
-    <script src="six.css"></script>
+    <script src="six.js"></script>
 </body>
 
 </html>
