--- a/oneToTen/daySix/six.html
+++ b/oneToTen/daySix/six.html
@@ -28,9 +28,9 @@
                 <p>Player 2: O</p>
             </div>
             <div class="row">
-                <p>Result:<span class="result"></span></p>
+                <p class="result"></p>
 
-                <p><span class="turn"></span>Turn</p>
+                <p class="turn"></p>
             </div>
             <div class="row">
                 <button class="reset">RESET</button>
