complete the functionality

--- a/oneToTen/daySix/six.html
+++ b/oneToTen/daySix/six.html
@@ -22,10 +22,9 @@
     <div class="XO">
         <header>
             <div class="row">
-                <p>
-                    Player 1: X
-                </p>
-                <p>Player 2: O</p>
+                <button class="xBtn">  Player X </button>
+                <button class="oBtn">Player O</button>
+
             </div>
             <div class="row">
                 <p class="result"></p>
