--- a/oneToTen/daySix/six.html
+++ b/oneToTen/daySix/six.html
@@ -27,9 +27,7 @@
 
             </div>
             <div class="row">
-                <p class="result"></p>
-
-                <p class="turn"></p>
+                <p class="status"></p>
             </div>
             <div class="row">
                 <button class="reset">RESET</button>
