refactor: changed the name of all folders, and ch8 created

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./index.css">
     <title>100 Days of Code</title>
 </head>
 
@@ -47,7 +47,7 @@
                     <h5 class="title">#One</h5>
 
                     <button class="btn1">
-                <a href="./oneToTen/dayOne/one.html">PUBLISH</a>
+                <a href="./oneToTen/ch1/index.html">PUBLISH</a>
             </button>
                 </div>
 
@@ -55,39 +55,45 @@
                     <h5 class="title">#Two</h5>
 
                     <button class="btn2">
-                <a href="./oneToTen/dayTwo/two.html">DIGITAL CLOCK</a>
+                <a href="./oneToTen/ch2/index.html">DIGITAL CLOCK</a>
             </button>
                 </div>
                 <div class="day">
                     <h5 class="title">#Three</h5>
 
                     <button class="btn3">
-                <a href="./oneToTen/dayThree/three.html">STOP WATCH</a>
+                <a href="./oneToTen/ch3/index.html">STOP WATCH</a>
             </button>
                 </div>
                 <div class="day">
                     <h5 class="title">#Four</h5>
                     <button class="btn4">
-                <a href="./oneToTen/dayFour/four.html">RATE</a>
+                <a href="./oneToTen/ch4/index.html">RATE</a>
 
             </button>
                 </div>
                 <div class="day">
                     <h5 class="title">#Five</h5>
                     <button class="btn5">
-                <a href="./oneToTen/dayFive/five.html">RGB SELECTOR</a>
+                <a href="./oneToTen/ch5/index.html">RGB SELECTOR</a>
                     </button>
                 </div>
                 <div class="day">
                     <h5 class="title">#Six</h5>
                     <button class="btn6">
-                        <a href="./oneToTen/daySix/six.html">XO</a>
+                        <a href="./oneToTen/ch6/index.html">XO</a>
                     </button>
                 </div>
                 <div class="day">
                     <h5 class="title">#Seven</h5>
                     <button class="btn7">
-                <a href="./oneToTen/daySeven/seven.html">DRAG</a>
+                         <a href="./oneToTen/ch7/index.html">DRAG</a>
+                    </button>
+                </div>
+                <div class="day">
+                    <h5 class="title">#Eight</h5>
+                    <button class="btn8">
+                         <a href="./oneToTen/ch8/index.html">ANALOG CLOCK</a>
                     </button>
                 </div>
         </div>
@@ -97,7 +103,7 @@
     </div>
 
 
-    <script src="js.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
