--- a/oneToTen/ch2/index.html
+++ b/oneToTen/ch2/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./two.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 
 
@@ -18,7 +18,7 @@
     <div class="digitalClock">
 
     </div>
-    <script src="two.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
