--- a/oneToTen/ch1/index.html
+++ b/oneToTen/ch1/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./one.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 
 
@@ -45,7 +45,7 @@
             </div>
         </button>
     </div>
-    <script src="one.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
