--- a/oneToTen/ch4/index.html
+++ b/oneToTen/ch4/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="four.css">
+    <link rel="stylesheet" href="./index.css">
     <title>100 Days of Code</title>
 </head>
 
@@ -28,7 +28,7 @@
 
     </main>
 
-    <script src="four.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
