--- a/oneToTen/ch7/index.html
+++ b/oneToTen/ch7/index.html
@@ -12,21 +12,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./three.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 
 
 </head>
 
 <body>
-    <div class="stopWatch">
-        <div class="btns">
-            <button class="start">START</button>
-            <button class="stop">STOP</button>
-            <button class="reset">RESET</button>
-        </div>
+    <div class="drag">
+        <img src="asset/dragItem.png" alt="" class="dragItem">
     </div>
-    <script src="./three.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
+<!-- <span class="hour">00</span>:<span class="minute">00</span>:<span class="second">00</span> -->
