--- a/oneToTen/ch8/index.html
+++ b/oneToTen/ch8/index.html
@@ -5,32 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="five.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Analog Clock</title>
 
 
 </head>
 
 <body>
-    <div class="RGB">
-        <div class="color"></div>
-        <label>R</label>
-        <input type="range" class="range red" min="0" max="255" value="0">
+    <div class="analogClock">
+        <div class="hourHand"></div>
+        <div class="minuteHand"></div>
+        <div class="secondHand"></div>
 
-        <label>G</label>
-        <input type="range" class="range green" min="0" max="255" value="0">
-
-        <label>B</label>
-        <input type="range" class="range blue" min="0" max="255" value="0">
     </div>
-    <script src="five.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
