--- a/oneToTen/ch8/index.html
+++ b/oneToTen/ch8/index.html
@@ -20,9 +20,10 @@
 
 <body>
     <div class="analogClock">
-        <div class="hourHand"></div>
-        <div class="minuteHand"></div>
-        <div class="secondHand"></div>
+        <div class="hand hourHand"></div>
+        <div class="hand minuteHand"></div>
+        <div class="hand secondHand"></div>
+        <div class="middleDOt"></div>
 
     </div>
     <script src="./index.js"></script>
