--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </header>
 
             <main class="main">
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#One</h5>
 
                     <button class="btn1">
@@ -51,49 +51,55 @@
             </button>
                 </div>
 
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Two</h5>
 
                     <button class="btn2">
                 <a href="./oneToTen/ch2/index.html">DIGITAL CLOCK</a>
             </button>
                 </div>
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Three</h5>
 
                     <button class="btn3">
                 <a href="./oneToTen/ch3/index.html">STOP WATCH</a>
             </button>
                 </div>
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Four</h5>
                     <button class="btn4">
                 <a href="./oneToTen/ch4/index.html">RATE</a>
 
             </button>
                 </div>
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Five</h5>
                     <button class="btn5">
                 <a href="./oneToTen/ch5/index.html">RGB SELECTOR</a>
                     </button>
                 </div>
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Six</h5>
                     <button class="btn6">
                         <a href="./oneToTen/ch6/index.html">XO</a>
                     </button>
                 </div>
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Seven</h5>
                     <button class="btn7">
                          <a href="./oneToTen/ch7/index.html">DRAG</a>
                     </button>
                 </div>
-                <div class="day">
+                <div class="challenge">
                     <h5 class="title">#Eight</h5>
                     <button class="btn8">
                          <a href="./oneToTen/ch8/index.html">ANALOG CLOCK</a>
+                    </button>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#Ninet</h5>
+                    <button class="btn9">
+                         <a href="./oneToTen/ch9/index.html">TASK MANAGER</a>
                     </button>
                 </div>
         </div>
