--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </button>
                 </div>
                 <div class="challenge">
-                    <h5 class="title">#Ninet</h5>
+                    <h5 class="title">#Nine</h5>
                     <button class="btn9">
                          <a href="./oneToTen/ch9/index.html">TASK MANAGER</a>
                     </button>
