feat: ch10 created

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                          <a href="./oneToTen/ch9/index.html">TASK MANAGER</a>
                     </button>
                 </div>
+                <div class="challenge">
+                    <h5 class="title">#Ten</h5>
+                    <button class="btn10">
+                         <a href="./oneToTen/ch10/index.html">Full Screen Menu</a>
+                    </button>
+                </div>
         </div>
         </main>
     </div>
