--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="bar"></div>
                 </div>
             </header>
-            <div class="headerSeperator"></div>
+            <div class="headerSeparator"></div>
             <ul></ul>
             <footer>
                 <img src="asset/img/profile.jpg" alt="">
