--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h5 class="title">#One</h5>
 
                     <button class="btn1">
-                <a href="./oneToTen/ch1/index.html">PUBLISH</a>
+                <a href="./1-10/ch1/index.html">PUBLISH</a>
             </button>
                 </div>
 
@@ -55,57 +55,64 @@
                     <h5 class="title">#Two</h5>
 
                     <button class="btn2">
-                <a href="./oneToTen/ch2/index.html">DIGITAL CLOCK</a>
+                <a href="./1-10/ch2/index.html">DIGITAL CLOCK</a>
             </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Three</h5>
 
                     <button class="btn3">
-                <a href="./oneToTen/ch3/index.html">STOP WATCH</a>
+                <a href="./1-10/ch3/index.html">STOP WATCH</a>
             </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Four</h5>
                     <button class="btn4">
-                <a href="./oneToTen/ch4/index.html">RATE</a>
+                <a href="./1-10/ch4/index.html">RATE</a>
 
             </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Five</h5>
                     <button class="btn5">
-                <a href="./oneToTen/ch5/index.html">RGB SELECTOR</a>
+                <a href="./1-10/ch5/index.html">RGB SELECTOR</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Six</h5>
                     <button class="btn6">
-                        <a href="./oneToTen/ch6/index.html">XO</a>
+                        <a href="./1-10/ch6/index.html">XO</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Seven</h5>
                     <button class="btn7">
-                         <a href="./oneToTen/ch7/index.html">DRAG</a>
+                         <a href="./1-10/ch7/index.html">DRAG</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Eight</h5>
                     <button class="btn8">
-                         <a href="./oneToTen/ch8/index.html">ANALOG CLOCK</a>
+                         <a href="./1-10/ch8/index.html">ANALOG CLOCK</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Nine</h5>
                     <button class="btn9">
-                         <a href="./oneToTen/ch9/index.html">TASK MANAGER</a>
+                         <a href="./1-10/ch9/index.html">TASK MANAGER</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Ten</h5>
                     <button class="btn10">
-                         <a href="./oneToTen/ch10/index.html">Full Screen Menu</a>
+                         <a href="./1-10/ch10/index.html">Full Screen Menu</a>
+                    </button>
+                </div>
+
+                <div class="challenge">
+                    <h5 class="title">#ELEVEN</h5>
+                    <button class="btn11">
+                         <a href="./11-20/ch11/index.html">Full Screen Menu</a>
                     </button>
                 </div>
         </div>
