--- a/1-10/ch2/index.html
+++ b/1-10/ch2/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
-    <title>Document</title>
+    <title>DIGITAL CLOCK</title>
 
 
 </head>
