--- a/1-10/ch3/index.html
+++ b/1-10/ch3/index.html
@@ -13,41 +13,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
-    <title>Document</title>
+    <title>STOP WATCH</title>
 
 
 </head>
 
 <body>
-    <div class="XO">
-        <header>
-            <div class="row">
-                <button class="xBtn">  Player X </button>
-                <button class="oBtn">Player O</button>
-
-            </div>
-            <div class="row">
-                <p class="status"></p>
-            </div>
-            <div class="row">
-                <button class="reset">RESET</button>
-            </div>
-        </header>
-        <div class="boxes">
-            <div class="box b0"></div>
-            <div class="box b1"></div>
-            <div class="box b2"></div>
-            <div class="box b3"></div>
-            <div class="box b4"></div>
-            <div class="box b5"></div>
-            <div class="box b6"></div>
-            <div class="box b7"></div>
-            <div class="box b8"></div>
+    <div class="stopWatch">
+        <div class="btns">
+            <button class="start">START</button>
+            <button class="stop">STOP</button>
+            <button class="reset">RESET</button>
         </div>
-
     </div>
     <script src="./index.js"></script>
 </body>
 
 </html>
-<!-- <span class="hour">00</span>:<span class="minute">00</span>:<span class="second">00</span> -->
