--- a/1-10/ch4/index.html
+++ b/1-10/ch4/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./index.css">
-    <title>100 Days of Code</title>
+    <title>RATE BUTTON</title>
 </head>
 
 <body>
