--- a/1-10/ch8/index.html
+++ b/1-10/ch8/index.html
@@ -12,27 +12,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./index.css">
-    <title>Task Manager</title>
+    <title>ANALOG CLOCK</title>
 
 
 </head>
 
 <body>
-    <div class="taskManager">
-        <header class="taskHeader">
-            <input class="addInput" type="text" placeholder="add task">
-            <button class="addBtn">
-             add
-            </button>
-        </header>
-        <main class="container"></main>
-    </div>
-
+    <div class='clock'></div>
     <script src="./index.js"></script>
 </body>
 
 </html>
 <!-- <span class="hour">00</span>:<span class="minute">00</span>:<span class="second">00</span> -->
-<!-- <i class='fa fa-trash-o'></i> -->
