--- a/11-20/ch11/index.html
+++ b/11-20/ch11/index.html
@@ -37,10 +37,49 @@
             </div>
         </section>
         <section>
-            <!-- switch: simple + flipping -->
+            <!-- switch: simple + smiley -->
+            <div class="switchWrapper">
+                <label class="simpleSwitch">
+                    <input class="swCh" type="checkbox">
+                    <div class="ballContainer">
+                        <div class="ball"></div>
+                    </div>
+                </label>
+                <span>Simple Switch</span>
+            </div>
+            <div class="switchWrapper">
+                <label class="smileySwitch">
+                    <input type="checkbox" class="syCh">
+                    <div class="ballContainer">
+                        <div class="ball">
+                            <svg viewBox="0 0 100 100">
+                                <circle cx="30" cy="37" r="10" fill='#333'/> 
+                                <circle cx="70" cy="37" r="10" fill='#333'/>
+                                <path d="M25,70 Q50,50,75,70" fill="none" stroke="#333" stroke-width="10" stroke-linecap="round"></path>
+                              </svg>
+                        </div>
+                    </div>
+                </label>
+                <span>Smiley Switch</span>
+            </div>
         </section>
         <section>
             <!-- line switch-->
+            <div class="switchWrapper">
+                <label class="lineSwitch">
+                    <input type="checkbox" class="lCh">
+                    <div class="lineSwitchContainer">
+                        <div class="square">
+                            <div class="outerBall">
+                                <div class="innerBall"></div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                    </div>
+                   
+                </label>
+                <span>Line Switch</span>
+            </div>
         </section>
     </div>
     <script src="./index.js"></script>
