--- a/11-20/ch12/index.html
+++ b/11-20/ch12/index.html
@@ -10,7 +10,48 @@
     <title>DARK-LIGHT THEME</title>
 </head>
 
-<body>
+<body class="light">
+    <div class="container">
+        <header>
+            <div class="row">
+                <h1>Skatebar</h1>
+                <nav>
+                    <ul class="menu">
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Delivery</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="row">
+                <!-- switch + login + sing up -->
+                <label class="switchWrapper">
+                    <input class="switch" type="checkbox">
+                    <div class="wrapper">
+                        <div class="ball"></div>
+                    </div>
+                </label>
+                <button>Login</button>
+                <button>Sign Up</button>
+            </div>
+        </header>
+        <main>
+            <div class="c1"></div>
+            <section>
+                <h2>Life's short</h2>
+                <h2>Ride long</h2>
+                <span>Browse through dozens of the best skateboard products online</span>
+                <button>Go Shop now</button>
+            </section>
+            <section>
+                <div class="c2"></div>
+                <div class="c3"></div>
+                <img src="./asset//image/skateboarder.png" alt="a girl is skating">
+            </section>
+        </main>
+    </div>
 
     <script src="./index.js"></script>
 </body>
