--- a/11-20/ch12/index.html
+++ b/11-20/ch12/index.html
@@ -11,48 +11,49 @@
 </head>
 
 <body class="light">
-    <div class="container">
-        <header>
-            <div class="row">
-                <h1>Skatebar</h1>
-                <nav>
-                    <ul class="menu">
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Delivery</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
 
-            <div class="row">
-                <!-- switch + login + sing up -->
-                <label class="switchWrapper">
+    <div class="bodyWrapper">
+        <div class="circle c1"></div>
+
+        <div class="container">
+            <header>
+                <div class="row">
+                    <h1><a href="#">Skatebar</a></h1>
+                    <nav>
+                        <ul class="menu">
+                            <li><a href="#">Shop</a></li>
+                            <li><a href="#">Delivery</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="row">
+                    <!-- switch + login + sing up -->
+                    <label class="switchWrapper">
                     <input class="switch" type="checkbox">
-                    <div class="wrapper">
+                    <div class="ballWrapper">
                         <div class="ball"></div>
                     </div>
                 </label>
-                <button>Login</button>
-                <button>Sign Up</button>
-            </div>
-        </header>
-        <main>
-            <div class="c1"></div>
-            <section>
-                <h2>Life's short</h2>
-                <h2>Ride long</h2>
-                <span>Browse through dozens of the best skateboard products online</span>
-                <button>Go Shop now</button>
-            </section>
-            <section>
-                <div class="c2"></div>
-                <div class="c3"></div>
+                    <button class="loginBtn">Login</button>
+                    <button class="singUpBtn">Sign Up</button>
+                </div>
+            </header>
+            <main>
+                <section class="showCase">
+                    <h1>Life's short <br/> Ride long</h1>
+                    <p>Browse through dozens of the best skateboard products online</p>
+                    <button class="shopBtn">Go Shop now</button>
+                </section>
                 <img src="./asset//image/skateboarder.png" alt="a girl is skating">
-            </section>
-        </main>
+            </main>
+            <div class="circle c2"></div>
+            <div class="circle c3"></div>
+        </div>
+        <div class="circle c4"></div>
     </div>
-
     <script src="./index.js"></script>
 </body>
 
