--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <footer>
                 <img src="asset/img/profile.jpg" alt="">
                 <div class="profileInfo">
-                    <p class="profileName">ArmanNijum</p>
+                    <p class="profileName">Paul Walker</p>
                     <span class="profileStatus">Admin</span>
                 </div>
                 <span class="fa fa-angle-up"></span>
