--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                          <a href="./11-20/ch12/index.html">Dark Light Theme</a>
                     </button>
                 </div>
+                <div class="challenge">
+                    <h5 class="title">#Thirteen</h5>
+                    <button class="btn13">
+                         <a href="./11-20/ch13/index.html">Nokia 3310 Snake</a>
+                    </button>
+                </div>
         </div>
         </main>
     </div>
