--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./sidebar.css">
     <title>100 Days of Code</title>
 </head>
 
@@ -46,91 +47,100 @@
                 <div class="challenge">
                     <h5 class="title">#One</h5>
 
-                    <button class="btn1">
-                <a href="./1-10/ch1/index.html">PUBLISH</a>
-            </button>
+                    <button class="btn btn1">
+                         <a class="link" href="./1-10/ch1/index.html">PUBLISH</a>
+                    </button>
                 </div>
 
                 <div class="challenge">
                     <h5 class="title">#Two</h5>
-
-                    <button class="btn2">
-                <a href="./1-10/ch2/index.html">DIGITAL CLOCK</a>
-            </button>
+                    <button class="btn btn2">
+                        <a class="link" href="./1-10/ch2/index.html">DIGITAL CLOCK</a>
+                    </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Three</h5>
 
-                    <button class="btn3">
-                <a href="./1-10/ch3/index.html">STOP WATCH</a>
-            </button>
+                    <button class="btn btn3">
+                        <a class="link" href="./1-10/ch3/index.html">STOP WATCH</a>
+                    </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Four</h5>
-                    <button class="btn4">
-                <a href="./1-10/ch4/index.html">RATE</a>
+                    <button class="btn btn4">
+                        <a class="link" href="./1-10/ch4/index.html">RATE</a>
 
-            </button>
+                    </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Five</h5>
-                    <button class="btn5">
-                <a href="./1-10/ch5/index.html">RGB SELECTOR</a>
+                    <button class="btn btn5">
+                        <a class="link" href="./1-10/ch5/index.html">RGB SELECTOR</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Six</h5>
-                    <button class="btn6">
-                        <a href="./1-10/ch6/index.html">XO</a>
+                    <button class="btn btn6">
+                        <a class="link" href="./1-10/ch6/index.html">XO</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Seven</h5>
-                    <button class="btn7">
-                         <a href="./1-10/ch7/index.html">DRAG</a>
+                    <button class="btn btn7">
+                         <a class="link" href="./1-10/ch7/index.html">DRAG</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Eight</h5>
-                    <button class="btn8">
-                         <a href="./1-10/ch8/index.html">ANALOG CLOCK</a>
+                    <button class="btn btn8">
+                         <a class="link" href="./1-10/ch8/index.html">ANALOG CLOCK</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Nine</h5>
-                    <button class="btn9">
-                         <a href="./1-10/ch9/index.html">TASK MANAGER</a>
+                    <button class="btn btn9">
+                         <a class="link" href="./1-10/ch9/index.html">TASK MANAGER</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Ten</h5>
-                    <button class="btn10">
-                         <a href="./1-10/ch10/index.html">Full Screen Menu</a>
+                    <button class="btn btn10">
+                         <a class="link" href="./1-10/ch10/index.html">Full Screen Menu</a>
                     </button>
                 </div>
 
                 <div class="challenge">
-                    <h5 class="title">#ELEVEN</h5>
-                    <button class="btn11">
-                         <a href="./11-20/ch11/index.html">Full Screen Menu</a>
+                    <h5 class="title">#Eleven</h5>
+                    <button class="btn btn11">
+                         <a class="link" href="./11-20/ch11/index.html">Full Screen Menu</a>
                     </button>
                 </div>
                 <div class="challenge">
-                    <h5 class="title">#TWELVE</h5>
-                    <button class="btn12">
-                         <a href="./11-20/ch12/index.html">Dark Light Theme</a>
+                    <h5 class="title">#Twelve</h5>
+                    <button class="btn btn12">
+                         <a class="link" href="./11-20/ch12/index.html">Dark Light Theme</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Thirteen</h5>
-                    <button class="btn13">
-                         <a href="./11-20/ch13/index.html">Nokia 3310 Snake</a>
+                    <button class="btn btn13">
+                         <a class="link" href="./11-20/ch13/index.html">Nokia 3310 Snake</a>
+                    </button>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#Fourteen</h5>
+                    <button class="btn btn14">
+                         <a class="link" href="./11-20/ch14/index.html">MANGO</a>
+                    </button>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#Fifteen</h5>
+                    <button class="btn btn15">
+                         <a class="link" href="./11-20/ch14/index.html">Space Invaders</a>
                     </button>
                 </div>
         </div>
         </main>
-    </div>
-
     </div>
 
 
