--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h5 class="title">#One</h5>
 
                     <button class="btn btn1">
-                         <a class="link" href="./1-10/ch1/index.html">PUBLISH</a>
+                        <a class="link" href="./1-10/ch1/index.html">PUBLISH</a>
                     </button>
                 </div>
 
@@ -87,56 +87,62 @@
                 <div class="challenge">
                     <h5 class="title">#Seven</h5>
                     <button class="btn btn7">
-                         <a class="link" href="./1-10/ch7/index.html">DRAG</a>
+                        <a class="link" href="./1-10/ch7/index.html">DRAG</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Eight</h5>
                     <button class="btn btn8">
-                         <a class="link" href="./1-10/ch8/index.html">ANALOG CLOCK</a>
+                        <a class="link" href="./1-10/ch8/index.html">ANALOG CLOCK</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Nine</h5>
                     <button class="btn btn9">
-                         <a class="link" href="./1-10/ch9/index.html">TASK MANAGER</a>
+                        <a class="link" href="./1-10/ch9/index.html">TASK MANAGER</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Ten</h5>
                     <button class="btn btn10">
-                         <a class="link" href="./1-10/ch10/index.html">Full Screen Menu</a>
+                        <a class="link" href="./1-10/ch10/index.html">Full Screen Menu</a>
                     </button>
                 </div>
 
                 <div class="challenge">
                     <h5 class="title">#Eleven</h5>
                     <button class="btn btn11">
-                         <a class="link" href="./11-20/ch11/index.html">Full Screen Menu</a>
+                        <a class="link" href="./11-20/ch11/index.html">Full Screen Menu</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Twelve</h5>
                     <button class="btn btn12">
-                         <a class="link" href="./11-20/ch12/index.html">Dark Light Theme</a>
+                        <a class="link" href="./11-20/ch12/index.html">Dark Light Theme</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Thirteen</h5>
                     <button class="btn btn13">
-                         <a class="link" href="./11-20/ch13/index.html">Nokia 3310 Snake</a>
+                        <a class="link" href="./11-20/ch13/index.html">Nokia 3310 Snake</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Fourteen</h5>
                     <button class="btn btn14">
-                         <a class="link" href="./11-20/ch14/index.html">MANGO</a>
+                        <a class="link" href="./11-20/ch14/index.html">MANGO</a>
                     </button>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Fifteen</h5>
                     <button class="btn btn15">
-                         <a class="link" href="./11-20/ch14/index.html">Space Invaders</a>
+                        <a class="link" href="./11-20/ch15/index.html">ACCORDION</a>
+                    </button>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#Sixteen</h5>
+                    <button class="btn btn16">
+                        <a class="link" href="#">Space Invaders</a>
                     </button>
                 </div>
         </div>
