--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="challenge">
                     <h5 class="title">#Eleven</h5>
                     <button class="btn btn11">
-                        <a class="link" href="./11-20/ch11/index.html">Full Screen Menu</a>
+                        <a class="link" href="./11-20/ch11/index.html">CHECKBOX</a>
                     </button>
                 </div>
                 <div class="challenge">
@@ -142,7 +142,7 @@
                 <div class="challenge">
                     <h5 class="title">#Sixteen</h5>
                     <button class="btn btn16">
-                        <a class="link" href="#">Space Invaders</a>
+                        <a class="link" href="./11-20/ch16/index.html">PROCESSING ANIMATION</a>
                     </button>
                 </div>
         </div>
